calling a UDF in pyspark

--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -236,7 +236,13 @@
    "outputs": [],
    "source": [
     "%python\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import BooleanType\n",
+    "from pyspark.sql.functions import col\n",
+    "from pyspark.sql.connect.dataframe import DataFrame\n",
     "import math\n",
+    "\n",
+    "@udf(returnType=BooleanType())\n",
     "def primecheck(myNum):\n",
     "\tif myNum==2:\n",
     "\t\treturn True\n",
@@ -272,12 +278,11 @@
    "outputs": [],
    "source": [
     "%python\n",
-    "from pyspark.sql.functions import *\n",
-    "import time \n",
     "\n",
     "df = spark.range(0,100)\n",
-    "df = df.withColumn(\"isPrime\", call_udf(\"primecheck\", col(\"id\")))\n",
-    "df = df.filter(col(\"isPrime\")==True)"
+    "print(type(df))\n",
+    "my_udf = udf(lambda z: primecheck(z),BooleanType())\n",
+    "df = df.withColumn(\"isPrime\", my_udf(df[\"id\"]))"
    ]
   },
   {
@@ -298,17 +303,49 @@
    },
    "outputs": [],
    "source": [
-    "display(df)"
+    "if isinstance(df, DataFrame):\n",
+    "    display(df)\n",
+    "else:\n",
+    "    print(\"The variable 'df' is not a valid Spark DataFrame.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4a572bcc-e3db-4051-8c44-bce2f349bd83",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#  spark.sql('select current_version()').show()\n",
+    "import sys\n",
+    "print(\"Python version:\", sys.version) "
    ]
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": "STANDARD"
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
-    "environment_version": "2"
+    "environment_version": "3"
    },
    "inputWidgetPreferences": null,
    "language": "python",
