--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -1329,13 +1329,13 @@
         "result.count()"
       ],
       "metadata": {
-        "id": "f74lnvrSUCMe",
-        "outputId": "fba9a2cd-185b-4652-f363-6e28edc5f991",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f74lnvrSUCMe",
+        "outputId": "ab8e10cf-4866-4dc7-d16a-2baab9289288"
       },
-      "execution_count": 96,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1345,9 +1345,21 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 97
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#writing data onto a file\n",
+        "df.write.format(\"csv\").mode(\"overwrite\").save(\"prime_numbers.csv\")"
+      ],
+      "metadata": {
+        "id": "K0w-rS1svMR6"
+      },
+      "execution_count": 98,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1488,11 +1500,47 @@
         "- Catalyst Optimizer adn Photon (DataBricks)  \n",
         "\n",
         "## DataFrame/ Query Planning\n",
-        "-\n",
+        "- When a DF is evaluated, the driver creates an optimzed execution plan throught a series of transformation\n",
+        " Unresolved logical plan -> Analyzed Logical Plan -> Optimized logical Plan -> Physical Plan\n",
         "\n"
       ],
       "metadata": {
         "id": "zWW531_yYyI-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Columnar Storage\n",
+        "\n",
+        "\n",
+        "*   Organizes data by column enabling efficient scanning and analysis\n",
+        "*   Efficient for analytical workloads\n",
+        "*   Implemented in dataframe internal storage and in physical file encoding formats such as Parquet and ORC.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "oP5GVVbWsb3j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# DataFrameReader and DataFrameWriter\n",
+        "\n",
+        "df = spark.read.format(\"format\").option().load()\n",
+        "\n",
+        "df = spark.read.csv(\"filelocation\")\n",
+        "df = spark.read.parquet(\"filelocation\")\n",
+        "\n",
+        "-------------\n",
+        "\n",
+        "df.write.format(\"format\").mode(\"mode\").save()\n",
+        "\n",
+        "df.write.csv(\"filelocation\")\n"
+      ],
+      "metadata": {
+        "id": "dIfc9_KZs9Mi"
       }
     }
   ],
