--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -38,7 +38,7 @@
         "  Spark Core (RDD API)-> Dataframe API -> Spark SQL/ Spark R API/ MLlib/ Structured Streaming API\n",
         "\n",
         "# Spark Runtime Architecture\n",
-        "Driver / Cluster Manager / Workers / Executers\n",
+        "Driver / Cluster Manager / Workers / Executors\n",
         "###  Driver    \n",
         "- Responsible for planning and co-ordinating execution.\n",
         "- Creates the SparkSession, the entry point to all spark applications.\n",
@@ -143,12 +143,12 @@
       "metadata": {
         "id": "fp8E6G4jmWRf"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -202,12 +202,12 @@
       "metadata": {
         "id": "6Xt_aN37KZPV"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -305,7 +305,7 @@
         "id": "f74lnvrSUCMe",
         "outputId": "ab8e10cf-4866-4dc7-d16a-2baab9289288"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {
@@ -371,7 +371,7 @@
         "id": "OwU5syzmlhcW",
         "outputId": "6c24126a-918b-4241-85ad-f7f751e2f79e"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +399,7 @@
       "metadata": {
         "id": "5FGX4gRZloXM"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -410,7 +410,7 @@
       "metadata": {
         "id": "2yDSYe9YGn5M"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
         "id": "r-Se1_tTAF09",
         "outputId": "aedf6bb7-ca0d-4c62-8ea5-b5fe63ca8dec"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "K0w-rS1svMR6"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,7 +552,7 @@
         "id": "Q2xrNk2Fxseb",
         "outputId": "ce6b6d60-e85e-43fa-eaa4-4d8f16955ade"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
