--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -719,11 +719,11 @@
         "housing_ddl_df.count()"
       ],
       "metadata": {
-        "id": "dtzBP_a6IiWQ",
-        "outputId": "e550944b-078e-44d9-c836-1dd01bfa0c07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dtzBP_a6IiWQ",
+        "outputId": "e550944b-078e-44d9-c836-1dd01bfa0c07"
       },
       "execution_count": 24,
       "outputs": [
@@ -772,14 +772,15 @@
     {
       "cell_type": "code",
       "source": [
+        "#Record count\n",
         "housing_data_df.count()"
       ],
       "metadata": {
-        "id": "r0UapUrIHXVz",
-        "outputId": "0bc57d0b-bd52-4813-b1f9-632662e8af4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r0UapUrIHXVz",
+        "outputId": "0bc57d0b-bd52-4813-b1f9-632662e8af4d"
       },
       "execution_count": 22,
       "outputs": [
@@ -823,58 +824,10 @@
         "housing_df.show()"
       ],
       "metadata": {
-        "id": "GOLDEouqFacl",
-        "outputId": "2cf84124-dc70-476e-c007-264021160e5b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "GOLDEouqFacl"
       },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "root\n",
-            " |-- longitude: double (nullable = true)\n",
-            " |-- latitude: double (nullable = true)\n",
-            " |-- housing_median_age: double (nullable = true)\n",
-            " |-- total_rooms: double (nullable = true)\n",
-            " |-- total_bedrooms: double (nullable = true)\n",
-            " |-- population: double (nullable = true)\n",
-            " |-- households: double (nullable = true)\n",
-            " |-- median_income: double (nullable = true)\n",
-            " |-- median_house_value: double (nullable = true)\n",
-            "\n",
-            "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
-            "|longitude|latitude|housing_median_age|total_rooms|total_bedrooms|population|households|median_income|median_house_value|\n",
-            "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
-            "|  -122.05|   37.37|              27.0|     3885.0|         661.0|    1537.0|     606.0|       6.6085|          344700.0|\n",
-            "|   -118.3|   34.26|              43.0|     1510.0|         310.0|     809.0|     277.0|        3.599|          176500.0|\n",
-            "|  -117.81|   33.78|              27.0|     3589.0|         507.0|    1484.0|     495.0|       5.7934|          270500.0|\n",
-            "|  -118.36|   33.82|              28.0|       67.0|          15.0|      49.0|      11.0|       6.1359|          330000.0|\n",
-            "|  -119.67|   36.33|              19.0|     1241.0|         244.0|     850.0|     237.0|       2.9375|           81700.0|\n",
-            "|  -119.56|   36.51|              37.0|     1018.0|         213.0|     663.0|     204.0|       1.6635|           67000.0|\n",
-            "|  -121.43|   38.63|              43.0|     1009.0|         225.0|     604.0|     218.0|       1.6641|           67000.0|\n",
-            "|  -120.65|   35.48|              19.0|     2310.0|         471.0|    1341.0|     441.0|        3.225|          166900.0|\n",
-            "|  -122.84|    38.4|              15.0|     3080.0|         617.0|    1446.0|     599.0|       3.6696|          194400.0|\n",
-            "|  -118.02|   34.08|              31.0|     2402.0|         632.0|    2830.0|     603.0|       2.3333|          164200.0|\n",
-            "|  -118.24|   33.98|              45.0|      972.0|         249.0|    1288.0|     261.0|       2.2054|          125000.0|\n",
-            "|  -119.12|   35.85|              37.0|      736.0|         166.0|     564.0|     138.0|       2.4167|           58300.0|\n",
-            "|  -121.93|   37.25|              36.0|     1089.0|         182.0|     535.0|     170.0|         4.69|          252600.0|\n",
-            "|  -117.03|   32.97|              16.0|     3936.0|         694.0|    1935.0|     659.0|       4.5625|          231200.0|\n",
-            "|  -117.97|   33.73|              27.0|     2097.0|         325.0|    1217.0|     331.0|       5.7121|          222500.0|\n",
-            "|  -117.99|   33.81|              42.0|      161.0|          40.0|     157.0|      50.0|          2.2|          153100.0|\n",
-            "|  -120.81|   37.53|              15.0|      570.0|         123.0|     189.0|     107.0|        1.875|          181300.0|\n",
-            "|   -121.2|   38.69|              26.0|     3077.0|         607.0|    1603.0|     595.0|       2.7174|          137500.0|\n",
-            "|  -118.88|   34.21|              26.0|     1590.0|         196.0|     654.0|     199.0|       6.5851|          300000.0|\n",
-            "|  -122.59|   38.01|              35.0|     8814.0|        1307.0|    3450.0|    1258.0|       6.1724|          414300.0|\n",
-            "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
-            "only showing top 20 rows\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -892,9 +845,23 @@
       },
       "outputs": [],
       "source": [
-        "#writing data onto a file\n",
+        "#writing data onto a file csv\n",
+        "\n",
         "result.write.format(\"csv\").mode(\"overwrite\").save(\"primes\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "housing_df.write.format(\"parquet\") \\\n",
+        ".mode(\"overwrite\") \\\n",
+        ".save(\"housing_parquet\")"
+      ],
+      "metadata": {
+        "id": "-LVfJ3-SJIY9"
+      },
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
