--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -864,6 +864,60 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Writing the dataframe to a new table\n",
+        "housing_df.write.saveAsTable(\"california_housing\")"
+      ],
+      "metadata": {
+        "id": "kdudWXW2KEcd"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Display all available tables\n",
+        "spark.sql(\"SHOW TABLES\").show()"
+      ],
+      "metadata": {
+        "id": "7D6ayIzlMOai",
+        "outputId": "cb450e0f-2151-44b3-f26e-0a16c352c8ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+------------------+-----------+\n",
+            "|namespace|         tableName|isTemporary|\n",
+            "+---------+------------------+-----------+\n",
+            "|  default|california_housing|      false|\n",
+            "+---------+------------------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display data in table\n",
+        "spark.sql(\"select * from california_housing\").show()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ogBqfgvTKajI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "application/vnd.databricks.v1+cell": {
@@ -968,6 +1022,26 @@
         "**SQL Query Execution**\n",
         "    - spark.sql() for SQL statements\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c88d4397"
+      },
+      "source": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bf047a8d"
+      },
+      "source": [
+        "spark.sql(\"SHOW TABLES\").show()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
