--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -876,48 +876,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#Display all available tables\n",
-        "spark.sql(\"SHOW TABLES\").show()"
-      ],
-      "metadata": {
-        "id": "7D6ayIzlMOai",
-        "outputId": "cb450e0f-2151-44b3-f26e-0a16c352c8ba",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+---------+------------------+-----------+\n",
-            "|namespace|         tableName|isTemporary|\n",
-            "+---------+------------------+-----------+\n",
-            "|  default|california_housing|      false|\n",
-            "+---------+------------------+-----------+\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Display data in table\n",
-        "spark.sql(\"select * from california_housing\").show()\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "ogBqfgvTKajI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "application/vnd.databricks.v1+cell": {
@@ -1024,24 +982,75 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "c88d4397"
-      },
+      "cell_type": "markdown",
       "source": [],
+      "metadata": {
+        "id": "Z7--JeRBWIRX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Display all available tables\n",
+        "spark.sql(\"SHOW TABLES\").show()"
+      ],
+      "metadata": {
+        "id": "k34lqvkMWHpH"
+      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "bf047a8d"
-      },
       "source": [
-        "spark.sql(\"SHOW TABLES\").show()"
+        "# Display data in table\n",
+        "spark.sql(\"select * from california_housing\").show()\n",
+        "\n"
       ],
+      "metadata": {
+        "id": "ogBqfgvTKajI"
+      },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Distributed System Programming\n",
+        "\n",
+        "\n",
+        "*   Distributed computing fundamentals\n",
+        "    -   Shared nothing architecture\n",
+        "        - Independence\n",
+        "        - Scalability\n",
+        "        - Fault tolerance\n",
+        "        - Resource partitioning\n",
+        "    -   Partitioning\n",
+        "        - Data distribution\n",
+        "            -   Data divided into mutually exclusive in-memory partitions\n",
+        "            -   partitioning can be based upon input and manipulated\n",
+        "            -   size and number of partitions affect parallelism        \n",
+        "    -   Parallel Processing\n",
+        "        -   Each partition processed independently\n",
+        "        -   multiple partitions can run in parallel\n",
+        "        -   one partition = one task in spark\n",
+        "*   Data Movement and Shuffling\n",
+        "    -   Data movement between nodes ops like groupby and Join\n",
+        "        Redistribute data across partitions required for operations like groupBy it occurs when wide transformations, key based operations, data repartitioning\n",
+        "*   MapReduce\n",
+        "    -   MapReduce Algorithm\n",
+        "    -   Its application in RDD and DataFrame APIs"
+      ],
+      "metadata": {
+        "id": "oaN8ruaMWWMS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "IRE4h0oxXR5w"
+      }
     }
   ],
   "metadata": {
