--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -1039,6 +1039,10 @@
         "        Redistribute data across partitions required for operations like groupBy it occurs when wide transformations, key based operations, data repartitioning\n",
         "*   MapReduce\n",
         "    -   MapReduce Algorithm\n",
+        "        - Map/Shuffle/Reduce\n",
+        "        - GroupBy: Map (extract keys)->Shuffle (by key)-> Reduce(aggregate)\n",
+        "        - join   : Map (prepare keys)->Shuffle (co-locate)-> Reduce(combine)\n",
+        "        - filter : Map (evaluate condition) -> No shuffle or reduce needed\n",
         "    -   Its application in RDD and DataFrame APIs"
       ],
       "metadata": {
@@ -1047,9 +1051,46 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# Basic ETL with dataframe API\n",
+        "\n",
+        "- DF operations are distributed automatically across all partitions\n",
+        "- All DF transformations have equivalent SQL operations.\n",
+        "- Methods return new DF rather than modifying the existing one.\n",
+        "- Each operation builds logical plan until an action triggers execution(Lazy loading)\n",
+        "\n",
+        "```\n",
+        "## Basic transformation methods and SQL equivalent\n",
+        "- select()          - SELECT\n",
+        "- filter(),where()  - WHERE\n",
+        "- groupBy()         - GROUP BY\n",
+        "- orderBy(),sort()  - ORDER BY\n",
+        "- join()            - JOIN\n",
+        "```\n",
+        "\n",
+        "## Referencing dataframe columns\n",
+        "\n",
+        "```\n",
+        "df.select(\"column-Name\")\n",
+        "df.select(df.column_name)\n",
+        "df.select(df[\"column_Name\"])\n",
+        "df.select(col(\"column-Name\").alias(\"CustomerName\"))\n",
+        "```\n",
+        "\n",
+        "## Common column object methods\n",
+        "\n",
+        "```\n",
+        "alias()\n",
+        "cast()/astype()\n",
+        "isNull()/isNotNull()\n",
+        "contains()\n",
+        "asc()/desc()\n",
+        "```\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "IRE4h0oxXR5w"
+        "id": "4te8hnouuifx"
       }
     }
   ],
